--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "multer": "^1.4.2",
     "multer-storage-cloudinary": "^2.2.1",
     "node-gyp": "^4.0.0",
-    "socket.io": "^2.3.0"
+    "socket.io": "^2.3.0",
+    "uuid": "^8.3.0"
   },
   "devDependencies": {
     "nodemon": "^1.19.0"
