--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-session": "^1.16.1",
     "firacode": "^5.2.0",
     "http-errors": "^1.7.2",
+    "moments": "0.0.2",
     "mongoose": "^5.5.9",
     "morgan": "~1.9.1",
     "multer": "^1.4.2",
